# board-game-geom

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust-ci.yml
board_game_geom/: all.html  constant.CELL_ID_OUTSIDE.html  constant.MOVE_ALL_ADJACENTS.html  constant.MOVE_ALL_DIRECTIONS.html  constant.MOVE_DOWN.html  constant.MOVE_LEFT.html  constant.MOVE_RIGHT.html  constant.MOVE_UP.html  constant.ROT_CCW0.html  constant.ROT_CCW180.html  constant.ROT_CCW270.html  constant.ROT_CCW90.html  constant.ROT_H_FLIP.html  constant.ROT_V_FLIP.html  index.html  sidebar-items.js  struct.CellId.html  struct.Move.html  struct.Point.html  struct.Points.html  struct.PointsInColumn.html  struct.PointsInRow.html  struct.Rotation.html  struct.Size.html  struct.Table.html  trait.Geom.html
implementors/board_game_geom/: trait.Geom.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Add.js  trait.Mul.js  trait.Neg.js  trait.Sub.js
implementors/core/ops/index/: trait.Index.js  trait.IndexMut.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs
src/board_game_geom/: lib.rs.html
(+1 files in other folders)
